# ECE-4560_Lab

./: .gitignore  Brett_Notes.txt  Jack_the_Gripper.json  README.md  main.py  pyproject.toml  read_position.py  set_position.py  setup.ps1  so101_utils.py
Robot Calibration Files/: Jack_the_Gripper.json  my_awesome_leader_arm.json
simulation_code/: run_mujoco_simulation_startingposition.py  run_mujoco_siulation.py
simulation_code/model/: so_101_mujuco_utils.py
