[project]
name = "ece-4560-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot[feetech]>=0.3.3",
    "mujoco>=3.3.6",
    "pydantic>=2.11.7",
    "pylance>=0.34.0",
    "ruff>=0.12.11",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
